# deepseek-client

./: .env  .env.example  Cargo.toml
examples/: basic.rs
src/: client.rs  error.rs  lib.rs
src/models/: mod.rs
