[package]
name = "deepseek-client"
version = "0.1.0"
edition = "2021"
description = "Minimal async Rust client for DeepSeek Chat Completions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abdulwahed-sweden/deepseek-client"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio   = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
dotenvy = "0.15"

# اختياري للتتبّع وقت التطوير
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
